# full-self-crawl-agent-alpha

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  output.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: policies.json  settings.json
docs/: agent-design-research.md  concurrent-exploration-architecture.md  exploration-memory-architecture.md  repair-plan.md  structure-mapping-redesign.md
docs/architecture/: 01-macro.md  02-meso.md  03-micro.md
scripts/: check_codepen.py  check_init_data.py  check_records.py  check_vol.py  diag_browser.py  diag_download_url.py  diag_export_button.py  diag_export_click.py  explore_codepen.py  save_login.py  test_discovery.py
services/camoufox/: server.py
skills/: skills.json
src/: main.py
src/config/: contracts.py  loader.py  validator.py
src/discovery/: engine.py  merger.py  types.py
src/execution/: actions.py  controller.py  history.py
src/management/: context.py  governor.py  orchestrator.py  run_intelligence.py  scheduler.py  state.py
src/strategy/: gate.py  policy.py  spec.py
src/tools/: analysis.py  artifacts.py  browser.py  code_runner.py  database.py  downloader.py  extraction.py  llm.py  parser.py  probe_tool.py  registry.py  search_tool.py  skill_library.py  storage.py
src/utils/: logging.py  runtime.py  url.py
src/verification/: verifier.py
tests/: test_multipage_concurrent.py
tests/unit/: test_b1_exploration_loop.py  test_b2_completeness.py  test_b3_hard_replay.py  test_database_schema.py  test_execution.py  (+9 more)
(+3 files in other folders)
